added grid to css file and media class entries for max 600px displays

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <!-- main logo / nav -->
   <header>
-    <h1 class = "myName">Andrew Sinkinson</h1>
+    <h1 class = "myName">Andrew<br> Sinkinson</h1>
     <section class = "avatar"></section>
     <nav>
       <ul>
@@ -31,26 +31,30 @@
     </div>
   </section>
 
-  <main class="page-wrapper">
 
-      <!-- about me -->
-    <section class="page-section" id="about">
-      <h2>About Me</h2>
-      <p>Text about myself.</p>
-    </section>
+    <section id="categoryGrid">  
 
-    <!-- portfolio container -->
-    <section class="page-section" id="work">
-      <h2>Work</h2>
-      <p>Text about my work.</p>
-    </section>
+      <div id="coderefracting" class="categoryGridArea">
+        <div class="heading">code refracting</div>
+      </div>  
 
-    <!-- contact -->
-    <section class="page-section contact" id="contact">
-      <h2>Contact Me</h2>
-      <p>Information on how to contact me.</p>
+      <div id="studyguide" class="categoryGridArea">
+        <div class="heading">Study Guide</div>
+      </div>  
+
+      <div id="calculator" class="categoryGridArea">
+        <div class="heading">Calculator</div>
+      </div>  
+
+      <div id="week3" class="categoryGridArea">
+        <div class="heading">Week 3</div>
+      </div>  
+
+      <div id="week4" class="categoryGridArea">
+        <div class="heading">Week 4</div>
+      </div>  
     </section>
-  </main>
+    
 </body>
 
 </html>
