updated css style sheet

--- a/index.html
+++ b/index.html
@@ -24,37 +24,63 @@
     </nav>
   </header>
 
-  <!-- hero banner -->
-  <section class="hero-banner">
-    <div>
-      <h2 class = "coolSubtitle">Cool subtitle here!</h2>
-    </div>
-  </section>
+  <main>
+    <!-- hero banner -->
+    <section class="hero-banner"></section>
 
-
-    <section id="categoryGrid">  
-
-      <div id="coderefracting" class="categoryGridArea">
-        <div class="heading">code refracting</div>
-      </div>  
-
-      <div id="studyguide" class="categoryGridArea">
-        <div class="heading">Study Guide</div>
-      </div>  
-
-      <div id="calculator" class="categoryGridArea">
-        <div class="heading">Calculator</div>
-      </div>  
-
-      <div id="week3" class="categoryGridArea">
-        <div class="heading">Week 3</div>
-      </div>  
-
-      <div id="week4" class="categoryGridArea">
-        <div class="heading">Week 4</div>
-      </div>  
+     <!-- about me -->
+     <section class="page-section" id="aboutMe">
+      <h2>About Me</h2>
+      <p>Text about me - Text about me - Text about me - Text about me - Text about me - 
+        Text about me - Text about me - Text about me - Text about me - Text about me - Text about me - Text about me - Text about me - Text about me - Text about me - 
+        Text about me - Text about me - Text about me - Text about me - Text about me - Text about me - Text about me - 
+        Text about me - Text about me - Text about me - Text about me - Text about me - Text about me - Text about me - 
+      </p>
     </section>
-    
+
+     <!-- portfolio container -->
+     <section class="page-section" id="work">
+      <h2>Work</h2>
+    </section>
+
+      <section id="categoryGrid">  
+
+        <div id="coderefracting" class="categoryGridArea">
+          <a href="https://duouk2000.github.io/marketing-code-refactoring/">
+          <div class="heading">code refracting</div>
+        </a>
+        </div>  
+
+        <div id="studyguide" class="categoryGridArea">
+          <div class="heading">Study Guide</div>
+        </div>  
+
+        <div id="calculator" class="categoryGridArea">
+          <div class="heading">Calculator</div>
+        </div>  
+
+        <div id="week3" class="categoryGridArea">
+          <div class="heading">Week 3</div>
+        </div>  
+
+        <div id="week4" class="categoryGridArea">
+          <div class="heading">Week 4</div>
+        </div>  
+      </section>
+      
+    <!-- contact -->
+    <section class="page-section-contact" id="contactMe">
+      <h2 class="contactMobile">Contact Me</h2>
+      <nav class="navContact">
+      <ul>
+        <li><a href="mailto:duouk2000@gmail.com">Duouk2000@gmail.com</a></li>
+        <li><a href="https://github.com/Duouk2000/">GitHub</a></li>
+        <li><a href="https://www.linkedin.com/in/andrew-sinkinson-68b26612a/">Linkdin</a></li>
+      </ul>
+    </nav>
+    </section>
+  
+  </main>
 </body>
 
 </html>
