altered html and css. also added new images and pdf file

--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Lernantino // Web Developer</title>
-  <link rel="stylesheet" href="./css/style.css" />
+  <title>Andrew Sinkinson // Web Developer</title>
+  <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
   <!-- main logo / nav -->
   <header>
-    <h1 class = "myName">Andrew<br> Sinkinson</h1>
-    <section class = "avatar"></section>
+    <h1 class="myName">Andrew<br> Sinkinson</h1>
+    <section class="myAvatar"></section>
     <nav>
       <ul>
         <li><a href="#aboutMe">About Me</a></li>
         <li><a href="#work">Work</a></li>
         <li><a href="#contactMe">Contact Me</a></li>
-        <li><a href="#resume">Resume</a></li>
+        <li class="resume"><a href="./assets/images/Andrew Sinkinson CV.pdf">Resume</a></li>
       </ul>
     </nav>
   </header>
@@ -31,10 +31,8 @@
      <!-- about me -->
      <section class="page-section" id="aboutMe">
       <h2>About Me</h2>
-      <p>Text about me - Text about me - Text about me - Text about me - Text about me - 
-        Text about me - Text about me - Text about me - Text about me - Text about me - Text about me - Text about me - Text about me - Text about me - Text about me - 
-        Text about me - Text about me - Text about me - Text about me - Text about me - Text about me - Text about me - 
-        Text about me - Text about me - Text about me - Text about me - Text about me - Text about me - Text about me - 
+      <p>I'm on an exhilarating journey into the world of web development, fueled by an insatiable curiosity and a passion for creating digital experiences. As an aspiring web developer, I'm enthusiastic about learning the intricacies of building websites and applications that make a meaningful impact.
+        I'm committed to continuously honing my skills and embracing the challenges that come with learning something new. I strive to collaborate, contribute, and grow within the vibrant community of developers, sharing insights and collectively pushing the boundaries of what's possible on the web.
       </p>
     </section>
 
@@ -43,44 +41,47 @@
       <h2>Work</h2>
     </section>
 
-      <section id="categoryGrid">  
-
-        <div id="coderefracting" class="categoryGridArea">
-          <a href="https://duouk2000.github.io/marketing-code-refactoring/">
-          <div class="heading">code refracting</div>
-        </a>
+    <section id="categoryGrid">  
+      <div id="coderefracting" class="categoryGridArea">
+        <div class="image-wrapper">
+          <a href="https://duouk2000.github.io/marketing-code-refactoring/"></a> 
+          <img src="./assets/images/code-refraction.jpg" alt="Code Refracting">        
+          <div class="heading1">Code Refracting</div>
+        </div>        
         </div>  
 
-        <div id="studyguide" class="categoryGridArea">
-          <div class="heading">Study Guide</div>
+        <div id="project-2" class="categoryGridArea">
+          <div class="heading">Project 2</div>
         </div>  
 
-        <div id="calculator" class="categoryGridArea">
-          <div class="heading">Calculator</div>
+        <div id="project-3" class="categoryGridArea">
+          <div class="heading">Project 3</div>
         </div>  
 
-        <div id="week3" class="categoryGridArea">
-          <div class="heading">Week 3</div>
+        <div id="project-4" class="categoryGridArea">
+          <div class="heading">Project 4</div>
         </div>  
 
-        <div id="week4" class="categoryGridArea">
-          <div class="heading">Week 4</div>
+        <div id="project-5" class="categoryGridArea">
+          <div class="heading">Project 5</div>
         </div>  
-      </section>
-      
-    <!-- contact -->
+    </section>
+    
+    <!-- contact details -->
     <section class="page-section-contact" id="contactMe">
-      <h2 class="contactMobile">Contact Me</h2>
-      <nav class="navContact">
-      <ul>
-        <li><a href="mailto:duouk2000@gmail.com">Duouk2000@gmail.com</a></li>
-        <li><a href="https://github.com/Duouk2000/">GitHub</a></li>
-        <li><a href="https://www.linkedin.com/in/andrew-sinkinson-68b26612a/">Linkdin</a></li>
-      </ul>
-    </nav>
+        <h2 class="contactMobile"></h2>
+        <nav class="navContact">
+          <ul>
+            <li><a href="mailto:duouk2000@gmail.com">Duouk2000@gmail.com</a></li>
+            <li><a href="https://github.com/Duouk2000/">GitHub</a></li>
+            <li><a href="https://www.linkedin.com/in/andrew-sinkinson-68b26612a/">LinkedIn</a></li>
+            <li><a href="https://open.spotify.com/user/duouk2000?si=d74df739969d47e2">Spotify</a></li>
+          </ul>
+        </nav>
     </section>
   
   </main>
+ 
 </body>
 
 </html>
