moved contact details to footer

--- a/index.html
+++ b/index.html
@@ -66,22 +66,23 @@
           <div class="heading">Project 5</div>
         </div>  
     </section>
-    
-    <!-- contact details -->
-    <section class="page-section-contact" id="contactMe">
-        <h2 class="contactMobile"></h2>
-        <nav class="navContact">
-          <ul>
-            <li><a href="mailto:duouk2000@gmail.com">Duouk2000@gmail.com</a></li>
-            <li><a href="https://github.com/Duouk2000/">GitHub</a></li>
-            <li><a href="https://www.linkedin.com/in/andrew-sinkinson-68b26612a/">LinkedIn</a></li>
-            <li><a href="https://open.spotify.com/user/duouk2000?si=d74df739969d47e2">Spotify</a></li>
-          </ul>
-        </nav>
-    </section>
-  
+     
   </main>
  
+  <footer>
+     <!-- contact details -->
+     <section class="page-section-contact" id="contactMe">
+      <h2 class="contactMobile"></h2>
+      <nav class="navContact">
+        <ul>
+          <li><a href="mailto:duouk2000@gmail.com">Duouk2000@gmail.com</a></li>
+          <li><a href="https://github.com/Duouk2000/">GitHub</a></li>
+          <li><a href="https://www.linkedin.com/in/andrew-sinkinson-68b26612a/">LinkedIn</a></li>
+          <li><a href="https://open.spotify.com/user/duouk2000?si=d74df739969d47e2">Spotify</a></li>
+        </ul>
+      </nav>
+    </section>
+  </footer>
 </body>
 
 </html>
